--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -1,3 +1,16 @@
 .btn-wrapper{
 	padding-top: 2rem;
 }
+
+.page-links > a{
+	display : inline-block;
+	width: 3rem;
+	text-align: center;
+}
+
+.profile-image{
+	height: 240px;
+	width:100%;
+	object-fit:cover;
+	object-position:top;
+}
